--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@primeuix/themes": "^1.2.5",
     "@tailwindcss/postcss": "^4.1.17",
     "3d-force-graph": "^1.79.0",
+    "culori": "^4.0.2",
     "force-graph": "^1.51.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
@@ -44,6 +45,7 @@
     "@angular/build": "^20.3.10",
     "@angular/cli": "^20.3.10",
     "@angular/compiler-cli": "^20.3.0",
+    "@types/culori": "^4.0.1",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.22",
     "jasmine-core": "~5.9.0",
