--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "rxjs": "~7.8.0",
     "svg-pan-zoom": "^3.6.2",
     "tailwindcss-primeui": "^0.6.1",
+    "three": "^0.181.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -52,6 +53,7 @@
     "@angular/localize": "^20.3.14",
     "@types/culori": "^4.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.181.0",
     "autoprefixer": "^10.4.22",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
