--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,6 @@ jobs:
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
           nsis: true
-          wails-version: '2.11.0'
+          wails-version: 'v2.11.0'
           go-version: '1.23'
           name: ${{ matrix.build.name }}
