--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,21 +24,52 @@ jobs:
             os: 'ubuntu-latest'
           - name: 'modpackgraph'
             platform:  'windows/amd64'
+            ext: .exe
             nsis: true
             os: 'windows-latest'
 
-    runs-on: ${{ matrix.build.os }}
+    runs-on: 'ubuntu-22.04'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Build wails
-        uses: The-Egg-Corp/wails-build-action@v2.1
-        id: build
+      - name: Setup Linux
+        if: runner.os == 'Linux'
+        id: linux_setup
+        run: |
+          sudo apt-get -yq update
+          sudo apt-get -yq install libgtk-3-0 libwebkit2gtk-4.1-dev gcc-aarch64-linux-gnu
+          echo "BUILD_OPTIONS='-nsis -platform windows/amd64 -platform linux/amd64'" >> "$GITHUB_OUTPUT"
+        shell: bash
+      - name: Setup GoLang
+        uses: actions/setup-go@v5
         with:
-          build-name: ${{ matrix.build.name }}
-          build-platform: ${{ matrix.build.platform }}
-          nsis: ${{ matrix.build.nsis }}
-          wails-version: 'v2.11.0'
+          check-latest: true
+          cache: true
+          cache-dependency-path: 'go.sum'
           go-version: '1.23'
-          name: ${{ matrix.build.name }}
+      - name: Setup NodeJS
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install Wails
+        run: go install github.com/wailsapp/wails/v2/cmd/wails@v2.11.0
+        shell: bash
+      - name: Build app
+        run: wails build ${{ steps.linux_setup.outputs.BUILD_OPTIONS }}
+        shell: bash
+      - name: Add Linux perms
+        run: chmod +x build/bin/*
+        shell: bash
+
+      - uses: actions/upload-artifact@v4
+        with:
+          path: |
+            */bin/
+            *\bin\*
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            */bin/*
