chore(build): update build options for cross-platform compatibility - Modified BUILD_OPTIONS to include both Windows and Linux platforms - Ensured proper environment variable usage in the build step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           sudo apt-get -yq update
           sudo apt-get -yq install libgtk-3-0 libwebkit2gtk-4.1-dev gcc-aarch64-linux-gnu mingw-w64
-          echo "BUILD_OPTIONS='-nsis -platform windows/amd64 -platform linux/amd64'" >> "$GITHUB_OUTPUT"
+          echo "BUILD_OPTIONS='-nsis -platform windows/amd64,linux/amd64'" >> "$GITHUB_OUTPUT"
         shell: bash
 
       - name: Setup GoLang
@@ -44,7 +44,9 @@ jobs:
         shell: bash
 
       - name: Build app
-        run: wails build ${{ steps.linux_setup.outputs.BUILD_OPTIONS }}
+        env:
+          BUILD_OPTIONS: ${{ steps.linux_setup.outputs.BUILD_OPTIONS }}
+        run: wails build $BUILD_OPTIONS
         shell: bash
 
       - uses: actions/cache@v4
