--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
         shell: bash
 
       - name: Build app
-        run: wails build -nsis -platform ${{ matrix.build.platform }}
+        run: wails build -platform ${{ matrix.build.platform }} ${{ runner.os == 'Linux' && '-nsis' ||  '' }}
         shell: bash
 
       - name: Building Installer
