--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          path: build/bin/**
+          path: ${{ runner.os == 'Linux' && 'build/bin/**' ||  'build/bin/modpackgraph-macos.pkg' }}
 
       - name: Release
         uses: softprops/action-gh-release@v1
