--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -21,6 +21,15 @@
       "@models": [
         "src/app/models/*"
       ],
+      "@core/*": [
+        "src/app/core/*"
+      ],
+      "@features/*": [
+        "src/app/features/*"
+      ],
+      "@shared/*": [
+        "src/app/shared/*"
+      ],
       "@/*": [
         "src/*"
       ],
