refactor(analysis): streamline progress tracking and improve observables - Consolidated progress event subscription into the constructor - Replaced manual observable creation with `of` for cached data retrieval - Updated path handling in components to use async pipes for better performance - Removed unnecessary zone.js references from configuration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,8 +42,7 @@
     "svg-pan-zoom": "^3.6.2",
     "tailwindcss-primeui": "^0.6.1",
     "three": "^0.181.2",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.3.10",
